--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,5 +23,6 @@ jobs:
       env:
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/myspringbootapp:${IMAGE_TAG} .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/myspringbootapp:${IMAGE_TAG}
+        docker build -t /myspringbootapp:${IMAGE_TAG} .
+        docker push /myspringbootapp:${IMAGE_TAG}
+
